<resources>
    <string name="app_name" translatable="false">天易通</string>
    <string name="platform_cross_border" translatable="false">跨境服务平台</string>
    <string name="platform_trading" translatable="false">外贸服务平台</string>
    <string name="title_activity_login" translatable="false">登录</string>
    <string name="home" translatable="false">首页</string>
    <string name="tools" translatable="false">工具</string>
    <string name="mine" translatable="false">我的</string>
    <string name="typeName" translatable="false">类别</string>
    <string name="title" translatable="false">标题</string>
    <string name="content" translatable="false">内容</string>
    <string name="sendDate" translatable="false">发送时间</string>
    <string name="creatorName" translatable="false">发件人</string>
    <string name="tools_check_exchange_rate" translatable="false">汇率查询</string>
    <string name="tools_check_hs_code" translatable="false">HS编码查询</string>
    <string name="tools_declare_factor" translatable="false">申报要素</string>
    <string name="tools_check_tax_refund_rate" translatable="false">退税率查询</string>
    <string name="tools_check_logistics" translatable="false">物流查询</string>
    <string name="mine_about" translatable="false">关于</string>
    <string name="mine_manualUpdate" translatable="false">检查更新</string>
    <string name="mine_safe_setting" translatable="false">安全设置</string>
    <string name="mine_title_change" translatable="false">抬头切换</string>
    <string name="mine_clear_cache" translatable="false">缓存清理</string>
    <string name="user_icon" translatable="false">头像</string>
    <string name="login_name" translatable="false">登录名</string>
    <string name="user_name" translatable="false">用户名</string>
    <string name="mobilephone_number" translatable="false">手机号码</string>
    <string name="mail" translatable="false">邮箱</string>
    <string name="pltAccountName" translatable="false">账户名</string>
    <string name="accountNature" translatable="false">角色</string>
    <string name="storageListGrid_deliveryInvoiceCode" translatable="false">进仓编号</string>
    <string name="storageListGrid_blNo" translatable="false">提单编号</string>
    <string name="storageListGrid_businessEnterpriseName" translatable="false">经营单位</string>
    <string name="storageListGrid_storageStatus" translatable="false">状态</string>
    <string name="storageListGrid_deliveryDate" translatable="false">进仓单创建日期</string>
    <string name="xinzhi" translatable="false">新制</string>
    <string name="yiluru" translatable="false">已录入</string>
    <string name="yiqueren" translatable="false">已确认</string>
    <string name="daishouhuo" translatable="false">待收货</string>
    <string name="yishouhuo" translatable="false">已收货</string>
    <string name="yishenbao" translatable="false">已申报</string>
    <string name="yibaoguan" translatable="false">已报关</string>
    <string name="receiverName" translatable="false">TO</string>
    <string name="deliveryInvoiceCode" translatable="false">进仓单号</string>
    <string name="estimatedSchedual" translatable="false">预计船期</string>
    <string name="startTimeOfDelivery" translatable="false">开始船期</string>
    <string name="latestTimeOfDelivery" translatable="false">结束船期</string>
    <string name="commodityDescCn" translatable="false">货名</string>
    <string name="vol" translatable="false">体积</string>
    <string name="volUnitEn" translatable="false">体积单位</string>
    <string name="packingQuantity" translatable="false">件数</string>
    <string name="packingUnitEn" translatable="false">件数单位</string>
    <string name="grossWeight" translatable="false">托单毛重</string>
    <string name="weightUnitEn" translatable="false">托单毛重单位</string>
    <string name="destinationPortCn" translatable="false">目的港</string>
    <string name="frontMark" translatable="false">唛头</string>
    <string name="deliveryCarNo" translatable="false">车牌号</string>
    <string name="deliveryCarDriverTelephone" translatable="false">司机电话</string>
    <string name="declareEnterpriseName" translatable="false">报关行信息</string>
    <string name="declareEnterpriseCode" translatable="false">十位代码</string>
    <string name="warehouseRemark" translatable="false">仓库名称</string>
    <string name="warehouseAddress" translatable="false">仓库地址</string>
    <string name="warehouseingTime" translatable="false">进仓时间</string>
    <string name="orderDelivery_businessEnterpriseCode" translatable="false">委托人代码</string>
    <string name="orderDelivery_businessEnterpriseName" translatable="false">委托人名称</string>
    <string name="orderDelivery_businessEnterpriseContactTelephone" translatable="false">委托人电话</string>
    <string name="orderDelivery_businessEnterpriseAddress" translatable="false">委托人地址</string>
    <string name="statusFormatCn_JYDM" translatable="false">状态</string>
    <string name="orderDelivery_businessEnterpriseName1" translatable="false">经营单位</string>
    <string name="orderDelivery_businessEnterpriseCode1" translatable="false">海关代码</string>
    <string name="customsName" translatable="false">出口口岸</string>
    <string name="customsName1" translatable="false">申报地海关</string>
    <string name="blNo" translatable="false">提单编号</string>
    <string name="orderType" translatable="false">进出口类型</string>
    <string name="vesselName" translatable="false">船名</string>
    <string name="voyageNo" translatable="false">航次</string>
    <string name="actualCustomsClearanceDate" translatable="false">出口日期</string>
    <string name="orderDelivery_declareDate" translatable="false">申报日期</string>
    <string name="salesOrder" translatable="false">合同协议</string>
    <string name="modeOfTransportationString" translatable="false">运输方式</string>
    <string name="orderDelivery_customsRecordNo" translatable="false">备案编号</string>
    <string name="licenseNo" translatable="false">许可证号</string>
    <string name="orderDelivery_deliveryEnterpriseCode" translatable="false">发货单位代码</string>
    <string name="orderDelivery_deliveryEnterpriseName" translatable="false">发货单位名称</string>
    <string name="orderDelivery_declareEnterpriseCode" translatable="false">申报单位代码</string>
    <string name="orderDelivery_declareEnterpriseName" translatable="false">申报单位名称</string>
    <string name="modeOfTrade" translatable="false">贸易方式</string>
    <string name="priceTerm" translatable="false">价格条款</string>
    <string name="payment1" translatable="false">结汇方式</string>
    <string name="ckCustomsClearanceNo" translatable="false">报关单号</string>
    <string name="orderDelivery_domesticSaleRate" translatable="false">内销比率</string>
    <string name="orderDelivery_exemptionWayId" translatable="false">征免性质</string>
    <string name="finalDestCountryCn" translatable="false">目的国</string>
    <string name="destinationPortCn1" translatable="false">目的港</string>
    <string name="source" translatable="false">境内货源地</string>
    <string name="shippingOrderType" translatable="false">整拼箱类型</string>
    <string name="packingQuantity1" translatable="false">件数</string>
    <string name="orderExportpackingUnitCn" translatable="false">商品名</string>
    <string name="vol1" translatable="false">体积</string>
    <string name="volUnitEn1" translatable="false">体积单位</string>
    <string name="grossWeight1" translatable="false">毛重</string>
    <string name="netWeight" translatable="false">净重</string>
    <string name="weightUnitEn1" translatable="false">重量单位</string>
    <string name="currency" translatable="false">币别</string>
    <string name="amount" translatable="false">金额</string>
    <string name="frontMark1" translatable="false">唛头</string>
    <string name="freightChargeModeId" translatable="false">运费/率/币别</string>
    <string name="premiumChargeModeId" translatable="false">保费/率/币别</string>
    <string name="otherFeeChargeModeId" translatable="false">杂费/率/币别</string>
    <string name="remark1" translatable="false">备注</string>
    <string name="detailList_customsRecordNo" translatable="false">商品备案号</string>
    <string name="detailList_hsCode1" translatable="false">商品HS码</string>
    <string name="detailList_nameCn1" translatable="false">中文品名</string>
    <string name="detailList_nameEn1" translatable="false">英文品名</string>
    <string name="detailList_categoryCode" translatable="false">物品编码</string>
    <string name="detailList_categoryName" translatable="false">物品类别</string>
    <string name="detailList_customsSummary" translatable="false">申报要素</string>
    <string name="detailList_supervisionCondition" translatable="false">监管条件</string>
    <string name="detailList_tariffRate" translatable="false">出口关税</string>
    <string name="detailList_brand" translatable="false">品牌</string>
    <string name="detailList_material" translatable="false">材质</string>
    <string name="detailList_placeOfOrigin" translatable="false">产地</string>
    <string name="detailList_specification" translatable="false">规格型号</string>
    <string name="detailList_jldwQuantity" translatable="false">第一法定数量</string>
    <string name="detailList_jldwName" translatable="false">第一计量单位</string>
    <string name="detailList_jldwSecondQuantity" translatable="false">第二法定数量</string>
    <string name="detailList_JldwSecondName" translatable="false">第二计量单位</string>
    <string name="detailList_packingAmount1" translatable="false">包装数量</string>
    <string name="detailList_packingUnitCn" translatable="false">包装单位</string>
    <string name="detailList_quantity1" translatable="false">工厂开票数量</string>
    <string name="detailList_unitCn1" translatable="false">工厂开票单位</string>
    <string name="detailList_grossWeight" translatable="false">毛重/KG</string>
    <string name="detailList_vol1" translatable="false">体积/CBM</string>
    <string name="detailList_currency" translatable="false">币别</string>
    <string name="detailList_saleUnitPrice1" translatable="false">单价</string>
    <string name="detailList_saleAmount1" translatable="false">总价</string>
    <string name="listmanage_deliveryInvoiceCode" translatable="false">进仓单编号</string>
    <string name="commodityManagementGrid_commodityNameCn" translatable="false">中文品名</string>
    <string name="commodityManagementGrid_hsCode" translatable="false">HS编码</string>
    <string name="commodityManagementGrid_statusView" translatable="false">备案状态</string>
    <string name="commodityManagementGrid_customsRecordNo" translatable="false">商品备案号</string>
    <string name="commodityNameCn" translatable="false">商品中文名称</string>
    <string name="commodityNameEn" translatable="false">商品英文名称</string>
    <string name="hsCode" translatable="false">HS编码</string>
    <string name="commodityAttribute_specifications" translatable="false">规格型号</string>
    <string name="vatRate" translatable="false">增税率</string>
    <string name="retRate" translatable="false">退税率</string>
    <string name="commodityAttribute_categoryName" translatable="false">商品类别名称</string>
    <string name="commodityAttribute_categoryCode" translatable="false">商品类别编码</string>
    <string name="commodityAttribute_supervisionCondition" translatable="false">监管条件</string>
    <string name="customsRecordNo" translatable="false">海关备案编号</string>
    <string name="commodityPrice_price" translatable="false">建议零售价</string>
    <string name="unitDetail_cn" translatable="false">计量单位</string>
    <string name="commodityAttribute_materialQuality" translatable="false">材质</string>
    <string name="commodityAttribute_commodityBrand" translatable="false">品牌</string>
    <string name="commodityAttribute_placeOfOrigin" translatable="false">产地</string>
    <string name="commodityAttribute_description" translatable="false">商品描述</string>
    <string name="commodityAttribute_isPublishToElecplt" translatable="false">是否发布到平台</string>
    <string name="check_details" translatable="false">查看详情</string>
    <string name="orderform" translatable="false">订单</string>
    <string name="earning_or_expenditure" translatable="false">收入/支出</string>
    <string name="date" translatable="false">时间</string>
    <string name="project" translatable="false">项目</string>
    <string name="between_parties" translatable="false">往来方</string>
</resources>