<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MyCardView"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/selector_mine_item_background"
        android:clickable="true"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:addStatesFromChildren="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.qskj.tyt.view.AlwaysMarqueeTextView
                android:id="@+id/tv_relatedCompanyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/between_parties"
                android:textColor="#444444"
                android:textSize="@dimen/textSize_16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_amountRmb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/earning_or_expenditure"
                android:textSize="@dimen/textSize_16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_fundName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:text="@string/project"
            android:textSize="@dimen/textSize_12sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_createDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ll"
            android:text="@string/date"
            android:textSize="@dimen/textSize_12sp" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_below="@+id/tv_createDate"
            android:layout_marginTop="10dp"
            android:background="@color/textView_home_bg" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/line"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/ic_arrow_next"
            android:text="@string/check_details"
            android:textSize="@dimen/textSize_11sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>